# MusicValue

./: .env.example  .gitignore  ABOUT.md  README.md
anchor/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
anchor/programs/fanfi-vault/: Cargo.toml
anchor/programs/fanfi-vault/src/: errors.rs  lib.rs
anchor/programs/fanfi-vault/src/instructions/: deposit.rs  initialize_vault.rs  withdraw.rs
anchor/programs/music-value/: Cargo.toml
anchor/programs/music-value/src/: errors.rs  lib.rs  state.rs
anchor/programs/music-value/src/instructions/: deposit.rs  distribute_yield.rs  initialize_vault.rs  mod.rs  update_pledge.rs  withdraw.rs
anchor/tests/: fanfi-vault.ts  music-value.ts
app/: package.json
app/public/: actions.json
app/src/app/: layout.tsx  page.tsx
app/src/components/artist/: ArtistVaultCard.tsx  AudiusLoginButton.tsx
app/src/components/layout/: Footer.tsx  Navbar.tsx
app/src/components/loyalty/: PointsBadge.tsx
app/src/components/player/: TrackPlayer.tsx
app/src/components/track/: RaisingSection.tsx  TrackCard.tsx  VaultPanel.tsx
app/src/hooks/: useLoyalty.ts  useVault.ts
app/src/lib/: constants.ts  idl.json
app/src/providers/: SolanaProvider.tsx
app/src/services/: audius.ts  loyalty.ts
backend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/src/: index.ts
backend/src/db/: schema.sql
backend/src/lib/: constants.ts  supabase.ts
backend/src/routes/: rpc.ts
backend/src/routes/actions/: backTrack.ts
backend/src/routes/audius/: verifyTrack.ts
backend/src/routes/db/: artists.ts  deposits.ts  (+1 more)
(+4 files in other folders)
