[package]
name = "music-value"
version = "0.1.0"
description = "MusicValue - Fans back music tracks and earn yield"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "music_value"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
